--- a/index1.html
+++ b/index1.html
@@ -102,14 +102,9 @@
             }
         }
 
-        // function setInfo() {
-        //     localStorage.setItem("username", prompt("请输入你的名字"));
-        //     localStorage.setItem("userno", prompt("请输入你的学号"));
-        //     window.location.reload();
-        // }
         function setInfo() {
-            localStorage.setItem("username", "冯世祥");
-            localStorage.setItem("userno", "119034910104");
+            localStorage.setItem("username", prompt("请输入你的名字"));
+            localStorage.setItem("userno", prompt("请输入你的学号"));
             window.location.reload();
         }
     </script>
